# bale-of-turtles

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/: tutle_chat.py
src/agent_turtle/: __init__.py  _turtle_state.py  agent_turtle.py  turtle_llm.py  turtle_tool.py
src/bale_of_turtles/: __init__.py  _turtle_state.py  action_turtle.py  agent_turtle.py  tool_turtle.py  turtle_llm.py  turtle_tool.py
src/bale_of_turtles/chat_turtle/: __init__.py  chat_turtle.py
src/bale_of_turtles/llm_turtle/: __init__.py  llama_turtle.py  llm_turtle.py
src/bale_of_turtles/turtle_llm/: __init__.py  llm_turtle.py
src/mini_turtle/: __init__.py  mini_turtle.py
src/mini_turtle/components/: __init__.py  git_llama.py  mini_tortoise_tts_component.py  mini_turtle_component.py
test/agent_turtle/: test_agent_turtle.py  test_llm_and_chat.py  test_turtle_llm.py  test_turtle_tool.py
test/mini_turtle/: test_mini_turtle_component.py
