[project]
name="bale_of_turtles"
version="1.0"
requires-python = ">=3.8"
authors = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
maintainers = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies=[
    "python-dotenv == 1.0.1",
    "pydantic ~= 2.8.2",
    "langchain==0.2.12",
    "langchain-community==0.2.11"
]

[project.optional-dependencies]
testing = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]